# pytest-snap

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  baseline.json  conftest.py  diff.json  history.jsonl  pyproject.toml  requirements-dev.txt  requirements.txt  tox.ini
.artifacts/: diff_v2.json  diff_v3.json  history.jsonl  pytest_baseline.json  run_all.html  run_v1.html  run_v2.html  run_v3.html  snap_all.json  snap_v1.json  snap_v2.json  snap_v3.json  v1.html  v2.html  v3.html
.github/workflows/: ci.yml  release.yml
.hypothesis/constants/: 0303556e9095647f  04644837d83ddbd0  09f9fa1a43bca38e  158ef32344f910aa  29f8a997c348d435  2dc84983f730ce6e  2e2cd831cabccea8  39aa422b93116cd6  3bb34d2fbdce5a21  4286e8b598249460  4361c95228ffa5ec  43a50a1cf2039c1a  44c5072280d3d360  4722f5457f039c18  4ac7d354de2e58fa  569697db5adc8898  5d0c9513ff6eb1d9  5dec72643e537103  6709584adf862909  7f15b2aaab1fea64  9bc994d49f96d2e7  a158fb236260d3b6  a180172cf086c251  a5c75ccadd2784d1  a99ef7bc89b5bc8a  aaee693819d198fe  addefb973b6e7c7a  b93c7fc64544aa39  bbafed65a2abcf36  c829a157cd65b66c  cc41f986e68b5ce6  d474e9a1b011223e  d751c661f9005a4c  d88f7ac1f7399ec4  e04e99d99e3a1219  eb8087d61c64677a  ec74637db779710b  f492da77b2572c24  f7c0468884d09180  f9c41126e694d585  (+1 more)
bench/: bench_diff.py  bench_generate.py
example_suite/: README.md  budgets.yaml  code_version_diff.py  compare_snapshots.py  demo_run.sh  diff_snap.sh  pretty_print_diff.py  quick.sh
example_suite/.artifacts/: history.jsonl  run_v1.html  run_v2.html  run_v3.html  snap_v1.json  snap_v2.json  snap_v3.json
example_suite/tests/: conftest.py  test_logic_progression.py  test_perf_progression.py  test_property_invariants.py
example_suite/v1/: test_logic.py  test_perf.py
example_suite/v2/tests/: test_logic.py  test_perf.py
example_suite/v3/: test_perf.py
example_suite/v3/tests/: test_logic.py
pytest_snap/: cli.py
src/pytest_html_baseline/: __init__.py  baseline.py  budgets.py  cli.py  config.py  diff.py  fingerprint.py  plugin.py  render.py
src/pytest_html_baseline.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/pytest_snap/: __init__.py  baseline.py  budgets.py  cli.py  config.py  diff.py  fingerprint.py  plugin.py  render.py
src/pytest_snap.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_diff_unit.py  test_discovery.py  test_plugin_integration.py  test_plugin_smoke.py
