[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pytest-html-baseline"
version = "0.1.0"
description = "Pytest plugin adding baseline comparison (failures, flaky, slowness) integrated with pytest-html and CI gating"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
	{ name = "pytest-html-baseline maintainers" }
]
keywords = ["pytest", "plugin", "html", "baseline", "regression", "ci"]
classifiers = [
	"Framework :: Pytest",
	"License :: OSI Approved :: MIT License",
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Operating System :: OS Independent",
	"Intended Audience :: Developers",
	"Topic :: Software Development :: Testing",
]
dependencies = [
	"pytest>=7.0"
]

[project.optional-dependencies]
html = ["pytest-html>=4.0"]
test = [
	"pytest>=7.0",
	"pytest-html>=4.0",
	"hypothesis>=6.0",
]
dev = [
	"psutil>=5.9",
	"hypothesis>=6.0",
	"pytest-html>=4.0",
	"pytest>=7.0"
]

[project.entry-points.pytest11]
html_baseline = "pytest_html_baseline.plugin"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.coverage.run]
source = ["pytest_html_baseline"]

[tool.ruff]
line-length = 100

