[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pytest-snap"
version = "0.1.0"
description = "Pytest plugin for snapshotting test outcomes & performance with rich diffs (failures, xfail transitions, flakiness, performance)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
	{ name = "pytest-snap maintainers" }
]
keywords = ["pytest", "plugin", "snapshot", "baseline", "regression", "performance", "ci"]
classifiers = [
	"Framework :: Pytest",
	"Framework :: Pytest :: Plugin",
	"License :: OSI Approved :: MIT License",
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Programming Language :: Python :: 3.13",
	"Operating System :: OS Independent",
	"Intended Audience :: Developers",
	"Topic :: Software Development :: Testing",
]
dependencies = [
	"pytest>=7.0"
]

[project.urls]
Homepage = "https://github.com/cr5459/pytest-html-baseline"
Source = "https://github.com/cr5459/pytest-html-baseline"
Issues = "https://github.com/cr5459/pytest-html-baseline/issues"

[project.optional-dependencies]
html = ["pytest-html>=4.0"]
test = [
	"pytest>=7.0",
	"pytest-html>=4.0",
	"hypothesis>=6.0",
	"PyYAML>=6.0",
]
dev = [
	"psutil>=5.9",
	"hypothesis>=6.0",
	"pytest-html>=4.0",
	"pytest>=7.0",
	"PyYAML>=6.0"
]

[project.entry-points.pytest11]
snap = "pytest_snap.plugin"

[project.scripts]
pytest-snap = "pytest_snap.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
license-files = ["LICENSE"]

[tool.pytest.ini_options]
addopts = "-q"
# Ignore example version directories so their duplicate test module names do not
# collide during normal root test runs (the quick.sh script invokes the unified
# suite under example_suite/tests explicitly). These directories are retained
# only for code diff demonstrations.
norecursedirs = [
	"example_suite/v1",
	"example_suite/v2",
	"example_suite/v3",
]

[tool.coverage.run]
source = ["pytest_snap"]

[tool.ruff]
line-length = 100

